[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sedaro"
version = "1.1.0"
authors = [
  { name="Sedaro", email="support@sedarotech.com" },
]
description = "A python client to interact with the Sedaro Satellite API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements-base-client.txt"]}

[project.urls]
"Homepage" = "https://github.com/sedaro/sedaro-python"
"Bug Tracker" = "https://github.com/sedaro/sedaro-python/issues"