[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sedaro"
version = "3.3.7.1"
authors = [
  { name="Sedaro", email="support@sedarotech.com" },
]
description = "A python client to interact with the Sedaro Satellite API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

# dynamic = ["dependencies"]

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt", "requirements-base-client.txt"]}
# NOTE: Make sure dependencies (below) includes everything from ^^^ (requirements files)
# Dependencies weren't being installed when downloading package, so explicitly defined them.
dependencies = [
    "certifi >= 14.5.14",
    "frozendict ~= 2.3.4",
    "python-dateutil ~= 2.7.0",
    "setuptools >= 21.0.0",
    "typing_extensions ~= 4.3.0",
    "urllib3 ~= 1.26.7",
    "pydash >= 5.1.1",
]


[project.urls]
"Homepage" = "https://github.com/sedaro/sedaro-python"
"Bug Tracker" = "https://github.com/sedaro/sedaro-python/issues"